resources/webidl2/test/invalid/baseline/scopedname.txt
Syntax error at line 2:
  typedef gfx::geom::
             ^ No name in typedef
